Fixed score alignment

--- a/src/css/comments.css
+++ b/src/css/comments.css
@@ -63,28 +63,16 @@
 /* Voting */
 
 .comment .voting-wrapper {
-    display: grid;
-    grid-template-columns: auto;
-    grid-template-rows: 2em 1em 1em auto;
+    display: flex;
+    text-align: center;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     padding: 0 1em 0 2em;
-    max-height: 100%;
 }
 
 .comment .voting-wrapper {
     margin: 0 auto;
-}
-
-.comment .voting-wrapper .vote-up {
-    padding-top: 1em;
-    grid-row: 1 / span 1;
-}
-
-.comment .voting-wrapper .score {
-    grid-row: 2 / span 1;
-}
-
-.comment .voting-wrapper .vote-down {
-    grid-row: 3 / span 1;
 }
 
 .comment .voting-wrapper .vote-up, .comment .voting-wrapper .vote-down {
@@ -92,15 +80,11 @@
 }
 
 .comment.upvoted .voting-wrapper .voting .vote-up {
-    color: chocolate;
+    color: var(--main-color-lighter);
 }
 
 .comment.downvoted .voting-wrapper .voting .vote-down {
-    color: deepskyblue;
-}
-
-.comment .voting-wrapper .score{
-    padding-left: 2px;
+    color: var(--main-color-lighter);
 }
 
 .expand-comments {
